Changelog
=========

7.8.dev0 - (unreleased)
-----------------------

7.7 - (2015-11-03)
------------------
* Bugfix: EEAReferenceField needs a list with related objects when setting
  references and not the object itself in case there is only one reference
  [ichim-david refs #30288]
* Bugfix: Customized set and getRaw methods for EEAReferenceField so we can
  have a diff for relations also
  [szabozo0 refs #21177]

7.6 - (2015-09-10)
------------------
* Change: documented the required js for eeareferencebrowser.js
  [ichimdav refs #27220]

7.5 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]
* Change: removed green gradient from popup-selected-items, we now use
  flat colors
  [ichimdav refs #27537]

7.4 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

7.3 - (2015-02-16)
------------------
* Change: cache forward and backward relations on relations macro
  since they are called also by the auto relations
  [ichimdav refs #21173]

7.2 - (2015-01-22)
------------------
* Bug fix: Fixed tests
  [avoinea]

7.1 - (2014-11-20)
------------------
* Change: Refactoring to speedup "broken relations algorithm" within Control Panel
  [voineali refs #21182]
* Change: Relations viewlet through Forward relations now searches for valid
  relationship with an extra check when checking the interfaces before ignoring
  the added relationship
  [ichimdav refs #20045]
* Feature: queryContentType can now search in a reverse fashion for the
  interface match. See categorizations.txt functional test for details
  [ichimdav refs #20045]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on